Add ComEd Opower integration and auto-generate credentials on first run
- Add Opower client for actual meter data from ComEd smart meter
- Add hot-reload cache detection (no restart needed after auth)
- Add token keep-alive with 10-minute refresh
- Add init container to auto-generate secure random tokens on first run
- Update docs with credential retrieval instructions
- Fix Grafana port references (3080) in Unraid deployment guide
- Add COMED_OPOWER_SETUP.md documentation

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 .env
 .secrets
 
+# Opower authentication cache (contains tokens and session cookies)
+.comed_opower_cache.json
+*_token_cache.json
+
 # Python
 __pycache__/
 *.py[cod]
@@ -50,3 +54,6 @@ htmlcov/
 # Temporary files
 *.tmp
 *.bak
+
+# Scripts directory (local utilities, not part of core project)
+scripts/
