--- a/.secrets.example
+++ b/.secrets.example
@@ -6,10 +6,9 @@
 # Usage: cp .secrets.example .secrets
 
 # =============================================================================
-# TESSIE API
+# TESSIE API (Required for Fleet API features)
 # =============================================================================
 # Generate your access token at: https://dash.tessie.com/settings/api
-# Required for Phase 4 (Tesla Vehicle Integration)
 #
 # Your Tessie Pro Lifetime account provides:
 # - Unlimited API polling at no cost
@@ -17,6 +16,39 @@
 # - Automatic vehicle wake-up and error handling
 #
 TESSIE_ACCESS_TOKEN=your_tessie_token_here
+
+# =============================================================================
+# COMED OPOWER API (Optional - for actual meter data)
+# =============================================================================
+# Provides actual electricity usage and costs from your ComEd smart meter.
+# This is the same data that appears on your monthly bill.
+#
+# See docs/COMED_OPOWER_SETUP.md for detailed setup instructions.
+#
+# -----------------------------------------------------------------------------
+# RECOMMENDED: Interactive Setup (no secrets needed here)
+# -----------------------------------------------------------------------------
+# Run the setup script locally - it will prompt for credentials:
+#   1. Set OPOWER_ENABLED=true in .env
+#   2. Install locally: pip install httpx python-dotenv
+#   3. Run locally: python scripts/comed_opower_setup.py
+#   4. Enter credentials and MFA code when prompted
+#   5. Collector auto-detects cache file within 30 seconds
+#
+# The script creates .comed_opower_cache.json with your session.
+# No credentials need to be stored in this file!
+#
+# -----------------------------------------------------------------------------
+# ALTERNATIVE: Bearer Token (Manual extraction, expires in ~20 min)
+# -----------------------------------------------------------------------------
+# To get the token:
+#   1. Log into secure.comed.com in your browser
+#   2. Navigate to "View My Usage"
+#   3. Open DevTools (F12) → Network tab
+#   4. Find any request to cec.opower.com
+#   5. Copy the Authorization header value
+#
+# COMED_BEARER_TOKEN=Bearer eyJhbGciOiJSUzI1NiIsInR5cCI6...
 
 # =============================================================================
 # FUTURE SECRETS (add as needed)
