--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 # Tesla Wall Connector Dashboard Configuration
-# Copy this file to .env and update values for your setup
 #
-# Quick Start:
+# AUTOMATIC SETUP:
+#   Just run: docker-compose up -d
+#   On first run, .env will be auto-generated with secure random tokens.
+#
+# MANUAL SETUP (if you prefer):
 #   cp .env.example .env
-#   # Edit .env with your values
+#   Edit .env with your values
 #   docker-compose up -d
 
 # =============================================================================
@@ -12,24 +15,30 @@
 # InfluxDB stores all time-series data (charger metrics, pricing, sessions)
 # These credentials are used on first startup to initialize the database
 # After initial setup, changing these won't affect existing data
+#
+# NOTE: INFLUXDB_ADMIN_TOKEN and INFLUXDB_ADMIN_PASSWORD are auto-generated
+# with secure random values on first run if you don't set them.
 
 INFLUXDB_ADMIN_USER=admin
-INFLUXDB_ADMIN_PASSWORD=changeme_admin_password
+INFLUXDB_ADMIN_PASSWORD=auto_generated_on_first_run
 INFLUXDB_ORG=home
 INFLUXDB_BUCKET=twc_dashboard
 
 # Token used by collector and Grafana to access InfluxDB
-# Generate a secure random string (e.g., openssl rand -hex 32)
-INFLUXDB_ADMIN_TOKEN=changeme_influxdb_token
+# Auto-generated on first run, or set your own (e.g., openssl rand -hex 32)
+INFLUXDB_ADMIN_TOKEN=auto_generated_on_first_run
 
 # =============================================================================
 # GRAFANA CONFIGURATION
 # =============================================================================
 # Grafana provides the web dashboard interface
-# Access at http://localhost:3000 after startup
+# Access at http://localhost:3080 after startup
+#
+# NOTE: GRAFANA_ADMIN_PASSWORD is auto-generated on first run.
+# Check .env after first startup to see your generated password.
 
 GRAFANA_ADMIN_USER=admin
-GRAFANA_ADMIN_PASSWORD=changeme_grafana_password
+GRAFANA_ADMIN_PASSWORD=auto_generated_on_first_run
 
 # =============================================================================
 # TESLA WALL CONNECTOR(S)
@@ -178,6 +187,48 @@ COMED_POLL_INTERVAL=300
 
 COMED_DELIVERY_PER_KWH=0.075
 COMED_MONTHLY_FIXED=19.56
+
+# =============================================================================
+# COMED OPOWER (Actual Meter Data via ComEd Portal)
+# =============================================================================
+# Opower integration fetches your actual electricity usage and cost data
+# directly from ComEd's portal. This is the same data that appears on your
+# monthly bill, including all fees, delivery charges, and taxes.
+#
+# Use cases:
+#   - Bill reconciliation (compare calculated vs. actual costs)
+#   - Accurate effective rates (see your true $/kWh)
+#   - Historical usage data (daily, hourly, or 30-minute resolution)
+#   - Monthly bill tracking
+#
+# IMPORTANT: Initial authentication requires MFA (Multi-Factor Authentication).
+# You must run the setup script first to authenticate and cache credentials:
+#
+#   python scripts/comed_auth.py --daemon
+#
+# This will:
+#   1. Prompt for your ComEd username/password
+#   2. Send an MFA code to your email or phone
+#   3. Cache the session for the collector to use
+#
+# Alternative: If you prefer not to store credentials, you can:
+#   1. Log into secure.comed.com in your browser
+#   2. Navigate to "View My Usage"
+#   3. Open browser DevTools → Network tab
+#   4. Copy the Authorization header from any cec.opower.com request
+#   5. Set COMED_BEARER_TOKEN in .secrets
+#
+# Note: Bearer tokens expire when your browser session ends.
+# Credentials stored in .secrets file (NOT here) for security.
+
+OPOWER_ENABLED=false
+
+# Polling interval in seconds (default: 3600 = 1 hour)
+# ComEd meter data typically updates once per day, so frequent polling isn't needed
+OPOWER_POLL_INTERVAL=3600
+
+# MFA method: "email" or "sms"
+OPOWER_MFA_METHOD=email
 
 # =============================================================================
 # TESSIE API (Tesla Vehicle Integration)
