--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,55 @@
 services:
+  # First-run initialization - generates .env with random tokens if not exists
+  init:
+    image: alpine:3.19
+    container_name: twc-init
+    volumes:
+      - ./:/config
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        if [ -f /config/.env ]; then
+          echo "✓ .env already exists, skipping initialization"
+          exit 0
+        fi
+
+        if [ ! -f /config/.env.example ]; then
+          echo "✗ .env.example not found!"
+          exit 1
+        fi
+
+        echo "Generating .env with random tokens..."
+
+        # Generate random tokens
+        INFLUX_TOKEN=$$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | head -c 48)
+        GRAFANA_PASS=$$(cat /dev/urandom | tr -dc 'a-zA-Z0-9!@#%' | head -c 16)
+        INFLUX_PASS=$$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | head -c 16)
+
+        # Copy template and replace placeholders
+        cp /config/.env.example /config/.env
+        sed -i "s|INFLUXDB_ADMIN_TOKEN=.*|INFLUXDB_ADMIN_TOKEN=$${INFLUX_TOKEN}|" /config/.env
+        sed -i "s|INFLUXDB_ADMIN_PASSWORD=.*|INFLUXDB_ADMIN_PASSWORD=$${INFLUX_PASS}|" /config/.env
+        sed -i "s|GRAFANA_ADMIN_PASSWORD=.*|GRAFANA_ADMIN_PASSWORD=$${GRAFANA_PASS}|" /config/.env
+
+        echo "============================================================"
+        echo "✓ Generated .env with random credentials"
+        echo ""
+        echo "  InfluxDB Token: $${INFLUX_TOKEN}"
+        echo "  InfluxDB Password: $${INFLUX_PASS}"
+        echo "  Grafana Password: $${GRAFANA_PASS}"
+        echo ""
+        echo "  These are saved in .env - keep this file secure!"
+        echo "============================================================"
+    restart: "no"
+
   # InfluxDB - Time Series Database
   influxdb:
     image: influxdb:2.7
     container_name: twc-influxdb
     restart: unless-stopped
+    depends_on:
+      init:
+        condition: service_completed_successfully
     ports:
       - "8086:8086"
     environment:
@@ -93,11 +139,20 @@ services:
       - SMART_CHARGING_STOP_PERCENTILE=${SMART_CHARGING_STOP_PERCENTILE:-90}
       - SMART_CHARGING_RESUME_PERCENTILE=${SMART_CHARGING_RESUME_PERCENTILE:-75}
       - SMART_CHARGING_MIN_INTERVAL=${SMART_CHARGING_MIN_INTERVAL:-600}
+      # Opower (ComEd meter data) settings
+      - OPOWER_ENABLED=${OPOWER_ENABLED:-false}
+      - OPOWER_POLL_INTERVAL=${OPOWER_POLL_INTERVAL:-3600}
+      - OPOWER_TOKEN_REFRESH_INTERVAL=${OPOWER_TOKEN_REFRESH_INTERVAL:-600}
+      - OPOWER_MFA_METHOD=${OPOWER_MFA_METHOD:-email}
       - TZ=${TZ:-America/Chicago}
     volumes:
       # Mount secrets file (contains Tessie API token, etc.)
       # Create .secrets from .secrets.example and add your tokens
       - ./.secrets:/app/.secrets:ro
+      # Mount project root so collector can access cache file
+      # The Opower cache file (.comed_opower_cache.json) is created by running
+      # scripts/comed_opower_setup.py locally, then copied to this directory
+      - ./:/app/project:ro
     depends_on:
       influxdb:
         condition: service_healthy
