Update documentation to reflect default credentials
- Remove references to auto-generated credentials
- Update .env.example with default values (changeme)
- Fix Grafana port in ACTION_PLAN.md (3000 → 3080)
- Simplify troubleshooting guidance

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Tesla Wall Connector Dashboard Configuration
 #
-# AUTOMATIC SETUP:
+# QUICK START:
 #   Just run: docker-compose up -d
-#   On first run, .env will be auto-generated with secure random tokens.
+#   Works out of the box with default credentials below.
 #
-# MANUAL SETUP (if you prefer):
+# CUSTOM SETUP (optional):
 #   cp .env.example .env
 #   Edit .env with your values
 #   docker-compose up -d
@@ -16,29 +16,26 @@
 # These credentials are used on first startup to initialize the database
 # After initial setup, changing these won't affect existing data
 #
-# NOTE: INFLUXDB_ADMIN_TOKEN and INFLUXDB_ADMIN_PASSWORD are auto-generated
-# with secure random values on first run if you don't set them.
+# For production: Change these values to secure passwords/tokens
+# Generate a token with: openssl rand -hex 32
 
 INFLUXDB_ADMIN_USER=admin
-INFLUXDB_ADMIN_PASSWORD=auto_generated_on_first_run
+INFLUXDB_ADMIN_PASSWORD=changeme
 INFLUXDB_ORG=home
 INFLUXDB_BUCKET=twc_dashboard
 
 # Token used by collector and Grafana to access InfluxDB
-# Auto-generated on first run, or set your own (e.g., openssl rand -hex 32)
-INFLUXDB_ADMIN_TOKEN=auto_generated_on_first_run
+INFLUXDB_ADMIN_TOKEN=twc-dashboard-token
 
 # =============================================================================
 # GRAFANA CONFIGURATION
 # =============================================================================
 # Grafana provides the web dashboard interface
 # Access at http://localhost:3080 after startup
-#
-# NOTE: GRAFANA_ADMIN_PASSWORD is auto-generated on first run.
-# Check .env after first startup to see your generated password.
+# Default login: admin / changeme
 
 GRAFANA_ADMIN_USER=admin
-GRAFANA_ADMIN_PASSWORD=auto_generated_on_first_run
+GRAFANA_ADMIN_PASSWORD=changeme
 
 # =============================================================================
 # TESLA WALL CONNECTOR(S)
